--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ h1 {
     background-color: crimson;
 }
 
+h2 {
+    font-size: 35px;
+    font-weight: 600;
+}
+
 p {
     font-size: 25px;
     font-weight: 500;
